--- a/index.html
+++ b/index.html
@@ -19,30 +19,22 @@ body{color:#fff;text-align:center;text-shadow:0 1px 3px rgba(0,0,0,.5)}.site-wra
 </style>  
 </head> <body ><div class="site-wrapper"> <div class="site-wrapper-inner"> <div class="cover-container"> 
 <div  class="inner cover "> <h1 class="cover-heading">افضل المواقع العربية </h1>
+<script>
+  (function() {
+    var cx = 'partner-pub-9336172280337580:8022189475';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
 
-
- <hr> <p  class="lead"> 
+  <p  class="lead"> 
     
-    <a href="https://www.thedreams.co/"  class="btn btn-outline-inverse btn-lg"> تفسير الاحلام</a><br>
-<a href="https://www.almrahonline.com/t/%d8%a7%d9%84%d8%a3%d8%a8%d8%b1%d8%a7%d8%ac" class="btn btn-outline-inverse btn-lg">ابراج</a> 
-<a href="https://www.almrahonline.com/pregnancy-childbirth " class="btn btn-outline-inverse btn-lg">الحمل</a>  
-<a href="https://www.almrahonline.com/womens-beauty-elegance/skin-care" class="btn btn-outline-inverse btn-lg">الشعر</a> 
-<a href="https://www.almrahonline.com/women-medicine " class="btn btn-outline-inverse btn-lg">الصحة</a> 
-<a href="https://www.almrahonline.com/womens-beauty-elegance" class="btn btn-outline-inverse btn-lg">مكياج</a> 
-<a href="https://www.almrahonline.com/276 " class="btn btn-outline-inverse btn-lg">يرج العقرب</a>  
-     
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/dresses">فساتين</a> 
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/عرايس">عرايس</a>
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/شوكولا"> شوكولا</a> 
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/رمضان"> رمضان </a> 
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/طبخ"> طبخ </a>  
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/الرياضة">الرياضة</a> 
-<a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/t/اكلات">اكلات</a>
-<a class="btn btn-outline-inverse btn-lg"  href="https://www.almrahonline.com/t/fashion-style">ازياء</a>
-<a class="btn btn-outline-inverse btn-lg"  href="https://www.almrahonline.com/t/اظافر">اظافر</a>
-<a class="btn btn-outline-inverse btn-lg"  href="https://www.almrahonline.com/t/الحب">الحب</a>
-<a class="btn btn-outline-inverse btn-lg"  href="https://www.almrahonline.com/t/تساقط-الشعر">تساقط-الشعر</a>
-<a class="btn btn-outline-inverse btn-lg"  href="https://www.almrahonline.com/t/dessert">حلويات</a>
+  
  <hr>
  <a class="btn btn-outline-inverse btn-lg" href="/women">للمرأة</a> 
  <a class="btn btn-outline-inverse btn-lg" href="https://www.almrahonline.com/1568">فوائد الزنجبيل</a>
