--- a/search.html
+++ b/search.html
@@ -28,6 +28,17 @@
 .page-node.page-node- #content-wrapper h1.page-title {
     padding: 20px 40px 0;
 }</style>
+<script>
+  (function() {
+    var cx = 'partner-pub-9336172280337580:8022189475';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
 
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
@@ -114,18 +125,9 @@
  
   
   <div class="content">
- <script>
-  (function() {
-    var cx = 'partner-pub-9336172280337580:8022189475';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
+
 <gcse:search></gcse:search>
+    <gcse:searchresults-only></gcse:searchresults-only>
   </div>
     
      
