--- a/search.html
+++ b/search.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <!--[if IE]><![endif]-->
@@ -126,7 +124,7 @@
   
   <div class="content">
 
-<gcse:search></gcse:search>
+<gcse:searchbox-only></gcse:searchbox-only>
     <gcse:searchresults-only></gcse:searchresults-only>
   </div>
     
