--- a/search.html
+++ b/search.html
@@ -58,6 +58,6 @@
 
 
   </body>
-    <style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{   width: 71px;
-    height: 28px;}</style>
+    <style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}
+  </style>
 </html>
