--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="text-muted"></p>
+        <p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a></p>
       </div>
     </footer>
   </body>
