--- a/women.html
+++ b/women.html
@@ -19,7 +19,7 @@
       </div>
 
 <div ><h3><a href="https://www.almrahonline.com/">المرأة </a></h3></div>
-<div><h3>خريطة الموقع</h3><ul><li
+<div><ul><li
 style='margin-top:10px;'><h4><a
 href='https://www.almrahonline.com/pregnancy-childbirth'>الحمل و الولادة</a></h4><ul><li><a
 href="https://www.almrahonline.com/12431">نصائح ذهبية تساعدكِ على الحمل .. إليكِ ..!</a></li><li><a
