--- a/search.html
+++ b/search.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" >
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="/favicon.ico">
-    <title>نتائج البحث - ابحث لنا</title>
-    <link href="/bootstrap.min.css" rel="stylesheet">
+<html lang="ar" ><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" href="/favicon.ico"><title>نتائج البحث - ابحث لنا</title><link href="/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0}</style>
       <script>
   (function() {
@@ -26,22 +19,10 @@
     enable_page_level_ads: true
   });
 </script>
-  </head>
-  <body>
-    <div  class="container">
-      <div dir="rtl"class="page-header">
-        <h1>نتائج البحث</h1>
-      </div>
+</head><body><div  class="container"><div dir="rtl"class="page-header"><h1>بحث لنا</h1></div>
    <gcse:searchbox-only></gcse:searchbox-only>
     <gcse:searchresults-only></gcse:searchresults-only>
-    </div>
-    <footer class="footer">
-      <div class="container">
-        <p class="text-muted"></p>
-      </div>
-    </footer>
-  </body>
-    <style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}
+</div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}
   </style>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
