--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.ico">
     <title>ابحث لنا</title>
     <link href="/bootstrap.min.css" rel="stylesheet">
-<style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0}</style>
+<style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0} .page-header{text-align: center;}</style>
       <script>
   (function() {
     var cx = 'partner-pub-9336172280337580:8022189475';
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div  class="container">
-      <div dir="rtl"class="page-header">
+      <div dir="rtl" class="page-header">
         <h1>موقع لنا</h1>
       </div>
    <gcse:searchbox-only></gcse:searchbox-only>
