--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="موقع لنا ، يهتم بجميع المواقع الموثوقه والامنه ، الدينيه الاخبار ، الرياضه ، الطقس والبحث بها
 ">
-    <link rel="icon" href="//www.lna.io/favicon.ico">
+    <link rel="shortcut icon" href="http://www.lna.io/favicon.ico" />
     <title>ابحث لنا</title>
     <link href="//www.lna.io/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0} .page-header{text-align: center;}</style>
