--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <div  class="container">
       <div dir="rtl" class="page-header">
-        <h1>موقع لنا</h1>
+        <h1>موقع <img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></h1>
       </div>
    <gcse:searchbox-only></gcse:searchbox-only>
     </div>
