--- a/search.html
+++ b/search.html
@@ -19,7 +19,8 @@
     enable_page_level_ads: true
   });
 </script>
-</head><body><div  class="container"><div dir="rtl" class="page-header"><h1>بحث لنا</h1></div>
+</head><body><div  class="container"><div dir="rtl" class="page-header"><h1> بحث <a href="http://www.lna.io/"><img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></a></h1>
+</div>
    <gcse:searchbox-only></gcse:searchbox-only>
     <gcse:searchresults-only></gcse:searchresults-only>
 </div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}
