--- a/search.html
+++ b/search.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" ><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="http://www.lna.io/favicon.ico"><title>نتائج البحث - ابحث لنا</title><link href="/bootstrap.min.css" rel="stylesheet">
-<style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0}</style>
+<style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0}.page-header{text-align: center;}</style>
       <script>
   (function() {
     var cx = 'partner-pub-9336172280337580:8022189475';
