--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </footer>
   </body>
     <style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{   width: 71px;
-    height: 28px;} .gsib_a {padding: 1px 6px 0;}</style>
+    height: 28px;} .gsc-input-box {height: 27px;}</style>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
