--- a/search.html
+++ b/search.html
@@ -23,8 +23,7 @@
 </div>
    <gcse:searchbox-only></gcse:searchbox-only>
     <gcse:searchresults-only></gcse:searchresults-only>
-</div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}
-  </style>
+</div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}.gsc-input-box {height: 29px;}</style>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
