--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://muslim.lna.io/">صحيح مسلم</a></p>
+        <p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.nourah.org/islam/muslim">صحيح مسلم</a> | <a href="http://www.nourah.org/islam/bukhari">صحيح البخاري</a> |<a href="https://www.almrahonline.com">المرأة</a> | <a href="https://www.saudiweather.net">الطقس</a> | <a href="https://www.thedreams.co">تفسير الاحلام</a></p>
       </div>
     </footer>
   </body>
