--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ar" >
   <head>
@@ -8,7 +9,7 @@
 ">
     <link rel="shortcut icon" href="http://www.lna.io/favicon.ico" />
     <title>ابحث لنا</title>
-    <link href="//www.lna.io/bootstrap.min.css" rel="stylesheet">
+    <link href="http://www.lna.io/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0} .page-header{text-align: center;}</style>
       <script>
   (function() {
@@ -35,10 +36,30 @@
         <h1>موقع <img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></h1>
       </div>
    <gcse:searchbox-only></gcse:searchbox-only>
+        
+<hr>
+        <div dir="rtl" class="row marketing">
+        <div class="col-lg-6">
+          <h4><a href="http://www.nourah.org/islam/muslim">صحيح مسلم</a></h4>
+
+          <h4><a href="https://www.almrahonline.com">المرأة</a></h4>
+
+          <h4><a href="https://www.saudiweather.net">الطقس</a></h4>
+        </div>
+
+        <div class="col-lg-6">
+          <h4><a href="http://www.nourah.org/islam/bukhari">صحيح البخاري</a></h4>
+
+          <h4><a href="https://www.thedreams.co">تفسير الاحلام</a></h4>
+
+          <h4><a href="http://www.nourah.org/dreams/ibn-sirin"> تفسير الاحلام ابن سيرين</a></h4>
+        </div>
+      </div>
     </div>
+      
     <footer class="footer">
       <div class="container">
-        <p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.nourah.org/islam/muslim">صحيح مسلم</a> | <a href="http://www.nourah.org/islam/bukhari">صحيح البخاري</a> |<a href="https://www.almrahonline.com">المرأة</a> | <a href="https://www.saudiweather.net">الطقس</a> | <a href="https://www.thedreams.co">تفسير الاحلام</a></p>
+        <p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> </p>
       </div>
     </footer>
   </body>
