--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="col-lg-6">
           <h4><a href="http://www.nourah.org/islam/bukhari">صحيح البخاري</a></h4>
 
-          <h4><a href="https://www.thedreams.co">تفسير الاحلام</a></h4>
+          <h4><a href="http://www.nourah.org/dreams">تفسير الاحلام</a></h4>
 
           <h4><a href="http://www.nourah.org/dreams/ibn-sirin"> تفسير الاحلام ابن سيرين</a></h4>
         </div>
