--- a/index.html
+++ b/index.html
@@ -11,32 +11,17 @@
     <title>ابحث لنا</title>
     <link href="http://www.lna.io/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0} .page-header{text-align: center;}</style>
-      <script>
-  (function() {
-    var cx = 'partner-pub-9336172280337580:8022189475';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9336172280337580",
-    enable_page_level_ads: true
-  });
-</script>
+
+    <script async src="https://cse.google.com/cse.js?cx=6bdd675ed21d1fe0a"></script>
+
+
   </head>
   <body>
     <div  class="container">
       <div dir="rtl" class="page-header">
         <h1>موقع <img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></h1>
       </div>
-   <gcse:searchbox-only></gcse:searchbox-only>
-        
+<div class="gcse-searchbox-only"></div>        
 <hr>
         <div dir="rtl" class="row marketing">
         <div class="col-lg-6">
