--- a/search.html
+++ b/search.html
@@ -1,29 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" ><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="http://www.lna.io/favicon.ico"><title>نتائج البحث - ابحث لنا</title><link href="/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0}.page-header{text-align: center;}</style>
-      <script>
-  (function() {
-    var cx = 'partner-pub-9336172280337580:8022189475';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-9336172280337580",
-    enable_page_level_ads: true
-  });
-</script>
+
+      <script async src="https://cse.google.com/cse.js?cx=6bdd675ed21d1fe0a"></script>
+      
 </head><body><div  class="container"><div dir="rtl" class="page-header"><h1> بحث <a href="http://www.lna.io/"><img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></a></h1>
 </div>
    <gcse:searchbox-only></gcse:searchbox-only>
-    <gcse:searchresults-only></gcse:searchresults-only>
-</div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}.gsc-input-box {height: 29px;}</style>
+<div class="gcse-searchresults-only"></div>
+
+      </div><footer class="footer"><div class="container"><p class="text-muted"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfXWVEsKwmJ5kNSbYa1BTr1t-kqbw8VlNhuICxxCk457c98TQ/viewform">اضف موقعك</a> | <a href="http://www.lna.io/">لنا</a></p></div></footer></body><style>.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2{ width: 71px; height: 28px;}.gsc-results .gsc-cursor-box {text-align: center;font-size: 20px;}.gsc-input-box {height: 29px;}</style>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
