--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
 <hr>
         <div dir="rtl" class="row marketing">
         <div class="col-lg-6">
-          <h4><a href="http://www.nourah.org/islam/muslim">صحيح مسلم</a></h4>
+          <h4><a href="http://muslim.lna.io/">صحيح مسلم</a></h4>
 
-          <h4><a href="https://www.almrahonline.com">المرأة</a></h4>
 
           <h4><a href="https://www.saudiweather.net">الطقس</a></h4>
         </div>
 
         <div class="col-lg-6">
-          <h4><a href="http://www.nourah.org/islam/bukhari">صحيح البخاري</a></h4>
+          <h4><a href="https://bukhari.lna.io/">صحيح البخاري</a></h4>
 
           <h4><a href="http://www.nourah.org/dreams">تفسير الاحلام</a></h4>
 
