--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 ">
     <link rel="shortcut icon" href="http://www.lna.io/favicon.ico" />
     <title>ابحث لنا</title>
-    <link href="http://www.lna.io/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.lna.io/bootstrap.min.css" rel="stylesheet">
 <style>html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;background-color:#f5f5f5}.container{width:auto;max-width:680px;padding:0 15px}.container .text-muted{margin:20px 0} .page-header{text-align: center;}</style>
 
     <script async src="https://cse.google.com/cse.js?cx=6bdd675ed21d1fe0a"></script>
@@ -25,17 +25,16 @@
 <hr>
         <div dir="rtl" class="row marketing">
         <div class="col-lg-6">
+                    <h4><a href="https://bukhari.lna.io/">صحيح البخاري</a></h4>
+
           <h4><a href="http://muslim.lna.io/">صحيح مسلم</a></h4>
 
- <h4></h4>
-          <h4><a href="https://www.saudiweather.net">الطقس</a></h4>
+       
         </div>
 
         <div class="col-lg-6">
-          <h4><a href="https://bukhari.lna.io/">صحيح البخاري</a></h4>
- <h4></h4>
           <h4><a href="http://www.nourah.org/dreams">تفسير الاحلام</a></h4>
-
+   <h4><a href="https://www.saudiweather.net">الطقس</a></h4>
         </div>
       </div>
     </div>
