--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div  class="container">
       <div dir="rtl" class="page-header">
-        <h1>موقع <img src="http://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></h1>
+        <h1>موقع <img src="https://www.lna.io/lna-logo.png" alt="لنا" title="لنا" /></h1>
       </div>
 <div class="gcse-searchbox-only"></div>        
 <hr>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="col-lg-6">
-           <h4><a href="http://muslim.lna.io/">صحيح مسلم</a></h4>
+           <h4><a href="https://muslim.lna.io/">صحيح مسلم</a></h4>
           <h4><a href="http://www.nourah.org/dreams">تفسير الاحلام</a></h4>
   
         </div>
